InternexDev_Sandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_C_Form_Collectible_Amount__c</fullName>
        <description>Sum of all C-Form Collectible Amounts of all the transactions of an Account, where C-Form required is &apos;YES&apos;</description>
        <label>Account C-Form Collectible Amount</label>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.akritiv__Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.Tax_Category__c</field>
            <operation>equals</operation>
            <value>A2</value>
        </summaryFilterItems>
        <summaryForeignKey>akritiv__Transaction__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Clerk_Code_Description__c</fullName>
        <label>Account Clerk Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_H_Form_Collectible_Amount__c</fullName>
        <description>Sum of all H-Form Collectible Amounts of all the transactions of an Account, where H-Form required is &apos;YES&apos;</description>
        <label>Account H-Form Collectible Amount</label>
        <summarizedField>akritiv__Transaction__c.H_Form_Collectible_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.akritiv__Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.H_Form_Required__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </summaryFilterItems>
        <summaryForeignKey>akritiv__Transaction__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_I_Form_Collectible_Amount__c</fullName>
        <description>Sum of all I-Form Collectible Amounts of all the transactions of an Account, where I-Form required is &apos;YES&apos;</description>
        <label>Account I-Form Collectible Amount</label>
        <summarizedField>akritiv__Transaction__c.I_Form_Collectible_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.akritiv__Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.I_Form_Required__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </summaryFilterItems>
        <summaryForeignKey>akritiv__Transaction__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <label>Counterparty Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Payer_Terms__c</fullName>
        <label>Account Payer Terms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Payment_Terms_Description__c</fullName>
        <label>Account Payment Terms Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segment__c</fullName>
        <label>Account Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Key Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrators</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_TDS_Collectible__c</fullName>
        <description>Sum of all TDS Collectible Amounts of all the Transactions of an Account, where TDS required is &apos;YES&apos;</description>
        <label>Account TDS Collectible</label>
        <summarizedField>akritiv__Transaction__c.TDS_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.akritiv__Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.TDS_Required__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </summaryFilterItems>
        <summaryForeignKey>akritiv__Transaction__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_name_Uniqueness__c</fullName>
        <label>Account name Uniqueness</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Accounting_Clerk_Code__c</fullName>
        <label>Accounting Clerk Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <formula>Brand__r.akritiv__Address1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <formula>Brand__r.akritiv__Address2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <formula>Brand__r.akritiv__Address3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adj_Fraud_Score__c</fullName>
        <label>Adj Fraud Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adj_Risk_Score__c</fullName>
        <label>Adj Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Akritiv_Contact_Email__c</fullName>
        <label>Akritiv Contact Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Akritiv_Contact_Fax__c</fullName>
        <label>Akritiv Contact Fax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akritiv_Contact_Name__c</fullName>
        <label>Akritiv Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Akritiv_Contact_Phone__c</fullName>
        <label>Akritiv Contact Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akritiv_Contact_Title__c</fullName>
        <label>Akritiv Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Floor__c</fullName>
        <label>Billing Floor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandLogo__c</fullName>
        <formula>Brand__r.akritiv__Brand_Logo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BrandLogo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>akritiv__Brand__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Call_Comments__c</fullName>
        <label>Cash Call Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <label>Check #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Credit_Number__c</fullName>
        <label>Child Credit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Number__c</fullName>
        <label>Child Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Brand__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryFilterItems>
            <field>akritiv__Transaction__c.akritiv__Balance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>akritiv__Transaction__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Brand__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Period__c</fullName>
        <label>Credit Period</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Bank_Account_Number__c</fullName>
        <label>Customer Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Rating__c</fullName>
        <label>Customer Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A - Excellent Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Good Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Average Risky Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Very Risky Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Rating_comments__c</fullName>
        <label>Customer Rating comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Visit_Date__c</fullName>
        <label>Customer Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Visit_Planned_Date__c</fullName>
        <label>Customer Visit Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBT_Paydex__c</fullName>
        <label>DBT (Paydex)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Date__c</fullName>
        <label>D&amp;B Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D_B_Limit__c</fullName>
        <label>D&amp;B  Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Risk_Score_Range__c</fullName>
        <label>D&amp;B Risk Score Range</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Risk_Score__c</fullName>
        <label>D&amp;B Risk Score</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Block_Description__c</fullName>
        <label>Delivery Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Block__c</fullName>
        <label>Delivery Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dunning_Language__c</fullName>
        <label>Dunning Language</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dunning_clerk__c</fullName>
        <label>Dunning clerk</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duns_Number__c</fullName>
        <label>Duns Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duns__c</fullName>
        <label>Duns #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Personal Contact Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Forecast__c</fullName>
        <formula>if ( OR( User_Forecast__c = 0.00, ISNULL(User_Forecast__c)),System_Forecast__c,User_Forecast__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foreign_Account__c</fullName>
        <label>Foreign Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Score_Date__c</fullName>
        <label>Fraud Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fraud_Score__c</fullName>
        <label>Fraud Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Limit__c</fullName>
        <label>Funding Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indemnities__c</fullName>
        <label>Indemnities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_DBT_Paydex__c</fullName>
        <label>Industry DBT (Paydex)</label>
        <picklist>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation and Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adm.,Support,Waste Mgmt,Remediation Serv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agri., Forestry, Fishing and Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts, Entertainment, and Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care and Social Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services (except Public Admin.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof. Scientific, and Techn. Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Rental and Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale Trade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Auto_Dunning_Date__c</fullName>
        <label>Last Auto Dunning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Dunning_Sent_on__c</fullName>
        <label>Last Dunning Sent on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Credit_Period__c</fullName>
        <label>Max Credit Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Missing_Key__c</fullName>
        <description>Concatenation of “Transit Routing #” and the “DD Account #&quot; to be used for matching records in Web Cash file in case account number not available</description>
        <label>Missing Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NACIS_Code__c</fullName>
        <label>NAICS Industry Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NACIS_Desc__c</fullName>
        <label>NAICS Industry Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnHold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Block_Description__c</fullName>
        <label>Order Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Block__c</fullName>
        <label>Order Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Stat_Form_Collectible_Amount__c</fullName>
        <description>Sum of Collectible Amounts of all the Stat Forms on the Account other than the H &amp; I Forms</description>
        <label>Other Stat Form Collectible Amount</label>
        <summarizedField>Statutory_Forms__c.Form_Collectible_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Statutory_Forms__c.Form_Collectible_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Statutory_Forms__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Risk_Level__c</fullName>
        <label>Override Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>A - Excellent Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Good Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Average Risky Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Very Risky Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Sales_District__c</fullName>
        <label>Override Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Sales_Region__c</fullName>
        <label>Override Sales Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_TAN__c</fullName>
        <label>PAN/ TAN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Total_AR__c</fullName>
        <formula>akritiv__PC_Current__c + akritiv__PC_1_30__c + akritiv__PC_31_60__c + akritiv__PC_61_90__c + akritiv__PC_91_180__c +  akritiv__PC_Over_180__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC-Total AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Total_Past_Due__c</fullName>
        <formula>akritiv__PC_1_30__c + akritiv__PC_31_60__c + akritiv__PC_61_90__c + akritiv__PC_91_180__c + akritiv__PC_Over_180__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC - Total Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Credit_Number__c</fullName>
        <label>Parent Credit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Number__c</fullName>
        <label>Parent Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payer_Fax__c</fullName>
        <label>Payer Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Phone__c</fullName>
        <label>Payer Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_To_City__c</fullName>
        <label>Payer To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_To_Country_Desc__c</fullName>
        <label>Payer To Country Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_To_Country__c</fullName>
        <label>Payer To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_To_Name__c</fullName>
        <label>Payer To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_To_State_Desc__c</fullName>
        <label>Payer To State Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_To_State__c</fullName>
        <label>Payer To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_To_Zip__c</fullName>
        <label>Payer To Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Client_Account_ID__c</fullName>
        <label>Portal Client-Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Debtor_ID__c</fullName>
        <label>Portal Debtor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Portal External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Previous_System_Forecast__c</fullName>
        <label>Previous System Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_User_Forecast__c</fullName>
        <label>Previous User Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principals__c</fullName>
        <label>Principals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>$User.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>IF(OR(MONTH(Today())= 4,MONTH(Today())= 5,MONTH(Today())= 6), &apos;First&apos;, 
IF(OR(MONTH(Today())= 7,MONTH(Today())= 8,MONTH(Today())= 9), &apos;Second&apos;, 
IF(OR(MONTH(Today())= 10,MONTH(Today())= 2,MONTH(Today())= 3), &apos;Third&apos;, &apos;Fourth&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remit_ABA__c</fullName>
        <formula>Brand__r.Remit_ABA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit ABA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Account__c</fullName>
        <formula>Brand__r.Remit_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Address__c</fullName>
        <formula>Brand__r.Remit_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Bank__c</fullName>
        <formula>Brand__r.Remit_Bank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit Bank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Email__c</fullName>
        <formula>Brand__r.Remit_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Name__c</fullName>
        <formula>Brand__r.Remit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_PO_Box__c</fullName>
        <formula>Brand__r.Remit_PO_Box__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit PO Box</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Zip__c</fullName>
        <formula>Brand__r.Remit_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <formula>IF(AND(ISBLANK(TEXT(Override_Risk_Level__c)),OR(AND(akritiv__Base_Total_AR__c &gt; 0, X60_DPD__c &gt; 0.50, X90_DPD__c &lt; 0.50), Total_Cheques_Bounced__c = 1)), &quot;C - Average Risky Customer&quot;,     
IF(AND(ISBLANK(TEXT(Override_Risk_Level__c)),OR(AND(akritiv__Base_Total_AR__c &gt; 0, X90_DPD__c  &gt; 0.50), Total_Cheques_Bounced__c &gt; 1)), &quot;D - Very Risky Customer&quot;,
IF(NOT(ISBLANK(TEXT(Override_Risk_Level__c))),TEXT(Override_Risk_Level__c),&quot;&quot;)))</formula>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Score_Date__c</fullName>
        <label>Risk Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <label>Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Type__c</fullName>
        <label>Risk Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_District__c</fullName>
        <formula>IF( ISBLANK( Override_Sales_District__c  ),  Sales_District__c  , Override_Sales_District__c)</formula>
        <label>Sales District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_Non_SAP__c</fullName>
        <formula>IF( ISBLANK( Override_Sales_District__c ), Sales_District__c , Override_Sales_District__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>SAP Sales District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Description__c</fullName>
        <label>Sales Office Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region1__c</fullName>
        <formula>IF( ISBLANK( Override_Sales_Region__c  ),  Sales_Region__c  , Override_Sales_Region__c)</formula>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region_Description__c</fullName>
        <label>Sales Region Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>SAP Sales Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>